--- a/app/config.yaml
+++ b/app/config.yaml
@@ -1,3 +1,5 @@
+server_name: 127.0.0.1
+server_port: 7860
 model_name_or_path: TheBloke/Llama-2-7B-chat-GGUF
 model_basename: llama-2-7b-chat.Q4_K_M.gguf
 embedding_model: all-MiniLM-L6-v2
